public/css/app.css
/* ... */
.container{
  width: 100%;
  margin-right: auto;
  margin-left: auto;
}
@media (min-width: 640px){
  .container{
    max-width: 640px;
  }
}
@media (min-width: 768px){
  .container{
    max-width: 768px;
  }
}
@media (min-width: 1024px){
  .container{
    max-width: 1024px;
  }
}
@media (min-width: 1280px){
  .container{
    max-width: 1280px;
  }
}
.fixed{
  position: fixed;
}
.absolute{
  position: absolute;
}
.relative{
  position: relative;
}
.top-0{
  top: 0px;
}
.left-0{
  left: 0px;
}
.right-0{
  right: 0px;
}
.-bottom-14{
  bottom: -3.5rem;
}
.left-1\/2{
  left: 50%;
}
.-top-20{
  top: -5rem;
}
.top-5{
  top: 1.25rem;
}
.right-5{
  right: 1.25rem;
}
.right-3{
  right: 0.75rem;
}
.top-1\/2{
  top: 50%;
}
.z-0{
  z-index: 0;
}
.-z-10{
  z-index: -10;
}
.z-40{
  z-index: 40;
}
.z-50{
  z-index: 50;
}
.z-10{
  z-index: 10;
}
.z-20{
  z-index: 20;
}
.order-3{
  order: 3;
}
.order-2{
  order: 2;
}
.order-1{
  order: 1;
}
.order-4{
  order: 4;
}
.m-auto{
  margin: auto;
}
.mx-auto{
  margin-left: auto;
  margin-right: auto;
}
.my-8{
  margin-top: 2rem;
  margin-bottom: 2rem;
}
.ml-3{
  margin-left: 0.75rem;
}
.-ml-px{
  margin-left: -1px;
}
.mb-20{
  margin-bottom: 5rem;
}
.ml-1{
  margin-left: 0.25rem;
}
.mt-2{
  margin-top: 0.5rem;
}
.mr-2{
  margin-right: 0.5rem;
}
.ml-2{
  margin-left: 0.5rem;
}
.mt-4{
  margin-top: 1rem;
}
.ml-4{
  margin-left: 1rem;
}
.mt-8{
  margin-top: 2rem;
}
.ml-12{
  margin-left: 3rem;
}
.-mt-px{
  margin-top: -1px;
}
.mb-3{
  margin-bottom: 0.75rem;
}
.mr-5{
  margin-right: 1.25rem;
}
.mb-6{
  margin-bottom: 1.5rem;
}
.mb-10{
  margin-bottom: 2.5rem;
}
.mr-6{
  margin-right: 1.5rem;
}
.mt-5{
  margin-top: 1.25rem;
}
.mt-24{
  margin-top: 6rem;
}
.mr-8{
  margin-right: 2rem;
}
.mb-8{
  margin-bottom: 2rem;
}
.mb-2{
  margin-bottom: 0.5rem;
}
.mt-7{
  margin-top: 1.75rem;
}
.mb-4{
  margin-bottom: 1rem;
}
.mb-80{
  margin-bottom: 20rem;
}
.block{
  display: block;
}
.inline-block{
  display: inline-block;
}
.flex{
  display: flex;
}
.inline-flex{
  display: inline-flex;
}
.grid{
  display: grid;
}
.hidden{
  display: none;
}
.h-5{
  height: 1.25rem;
}
.h-60{
  height: 15rem;
}
.h-32{
  height: 8rem;
}
.h-8{
  height: 2rem;
}
.h-16{
  height: 4rem;
}
.h-full{
  height: 100%;
}
.h-20{
  height: 5rem;
}
.h-14{
  height: 3.5rem;
}
.h-56{
  height: 14rem;
}
.h-10{
  height: 2.5rem;
}
.min-h-screen{
  min-height: 100vh;
}
.w-5{
  width: 1.25rem;
}
.w-full{
  width: 100%;
}
.w-95\%{
  width: 95%;
}
.w-102{
  width: 28rem;
}
.w-auto{
  width: auto;
}
.w-3\/4{
  width: 75%;
}
.w-32{
  width: 8rem;
}
.w-8{
  width: 2rem;
}
.w-14{
  width: 3.5rem;
}
.w-20{
  width: 5rem;
}
.w-10{
  width: 2.5rem;
}
.max-w-2xl{
  max-width: 42rem;
}
.max-w-full{
  max-width: 100%;
}
.max-w-6xl{
  max-width: 72rem;
}
.max-w-lg{
  max-width: 32rem;
}
.max-w-xl{
  max-width: 36rem;
}
.max-w-md{
  max-width: 28rem;
}
.max-w-sm{
  max-width: 24rem;
}
.flex-1{
  flex: 1 1 0%;
}
.flex-auto{
  flex: 1 1 auto;
}
.flex-grow{
  flex-grow: 1;
}
.-translate-x-1\/2{
  --tw-translate-x: -50%;
  transform: var(--tw-transform);
}
.-translate-y-10{
  --tw-translate-y: -2.5rem;
  transform: var(--tw-transform);
}
.-translate-y-1\/2{
  --tw-translate-y: -50%;
  transform: var(--tw-transform);
}
.transform{
  transform: var(--tw-transform);
}
.cursor-default{
  cursor: default;
}
.cursor-pointer{
  cursor: pointer;
}
.grid-cols-1{
  grid-template-columns: repeat(1, minmax(0, 1fr));
}
.flex-col{
  flex-direction: column;
}
.flex-wrap{
  flex-wrap: wrap;
}
.items-center{
  align-items: center;
}
.justify-center{
  justify-content: center;
}
.justify-between{
  justify-content: space-between;
}
.overflow-hidden{
  overflow: hidden;
}
.rounded-md{
  border-radius: 0.375rem;
}
.rounded-full{
  border-radius: 9999px;
}
.rounded-l-md{
  border-top-left-radius: 0.375rem;
  border-bottom-left-radius: 0.375rem;
}
.rounded-r-md{
  border-top-right-radius: 0.375rem;
  border-bottom-right-radius: 0.375rem;
}
.border{
  border-width: 1px;
}
.border-4{
  border-width: 4px;
}
.border-t{
  border-top-width: 1px;
}
.border-r{
  border-right-width: 1px;
}
.border-white{
  --tw-border-opacity: 1;
  border-color: rgba(255, 255, 255, var(--tw-border-opacity));
}
.bg-white{
  --tw-bg-opacity: 1;
  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
}
.bg-grey-light{
  --tw-bg-opacity: 1;
  background-color: rgba(244, 244, 244, var(--tw-bg-opacity));
}
.bg-primary{
  --tw-bg-opacity: 1;
  background-color: rgba(143, 106, 221, var(--tw-bg-opacity));
}
.bg-grey-dark{
  --tw-bg-opacity: 1;
  background-color: rgba(234, 234, 234, var(--tw-bg-opacity));
}
.bg-secondary{
  --tw-bg-opacity: 1;
  background-color: rgba(255, 96, 96, var(--tw-bg-opacity));
}
.bg-grey{
  --tw-bg-opacity: 1;
  background-color: rgba(239, 239, 239, var(--tw-bg-opacity));
}
.bg-about-pattern{
  background-image: url('/images/about.jpg');
}
.bg-newsletter-pattern{
  background-image: url('/images/newsletter.jpg');
}
.bg-contact-pattern{
  background-image: url('/images/contact.jpg');
}
.bg-contact-details-pattern{
  background-image: url('/images/contactDetails.jpg');
}
.bg-gallery-pattern{
  background-image: url('/images/gallery.jpg');
}
.bg-cakes-pattern{
  background-image: url('/images/service1.jpg');
}
.bg-puligi-pattern{
  background-image: url('/images/service4.jpg');
}
.bg-cheesecakes-pattern{
  background-image: url('/images/service2.jpg');
}
.bg-cupcakes-pattern{
  background-image: url('/images/service3.jpg');
}
.bg-cover{
  background-size: cover;
}
.bg-center{
  background-position: center;
}
.bg-no-repeat{
  background-repeat: no-repeat;
}
.object-cover{
  -o-object-fit: cover;
     object-fit: cover;
}
.p-6{
  padding: 1.5rem;
}
.p-7{
  padding: 1.75rem;
}
.p-2{
  padding: 0.5rem;
}
.p-1{
  padding: 0.25rem;
}
.p-5{
  padding: 1.25rem;
}
.p-3{
  padding: 0.75rem;
}
.px-4{
  padding-left: 1rem;
  padding-right: 1rem;
}
.py-2{
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}
.px-2{
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}
/* ... */

